--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,3 @@
-@font-face{
-  font-family: 'Nickainley-Normal';
-  src: url('Nickainley-Normal.otf');
-}
-
-@font-face{
-  font-family: 'Sunday-Regular';
-  src:  url('Sunday-Regular.otf'),
-        url('Sunday-Regular.ttf');
-}
-
 a { font-family: 'Josefin Slab', Arial, sans-serif; font-weight: bold;}
 
 /* Coustard Josefin Slab Cormorant Garamond*/
@@ -16,9 +5,6 @@ a { font-family: 'Josefin Slab', Arial, sans-serif; font-weight: bold;}
 h3 { font-family: 'Nickainley-Normal', Arial, sans-serif; }
 
 ul {
-
-    border-top: 1px solid #000000;
-    border-bottom: 1px solid #000000;
     background-color: white;
 }
 
@@ -28,6 +14,9 @@ ul {
   width: 100%;
   background-color: white;
 }
+.nav-item-right {
+  position: right;
+}
 
 .main {
     margin-bottom: 30px; 
@@ -35,6 +24,7 @@ ul {
 
 
 .logo-block {
+  position: left;
   max-width:150px;
   display: block;
   margin: auto;
@@ -50,6 +40,14 @@ ul {
   padding: 0px;
   width: 40%; 
   
+}
+
+.portfolio-item {
+  margin-bottom: 30px;
+}
+
+.pagination {
+  margin-bottom: 30px;
 }
 
   /* unvisited link */
