--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,6 +51,30 @@ ul {
   margin-bottom: 30px;
 }
 
+.chat-box{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+.box{
+    transition: height 1s ease-out;
+    width: 300px;
+    height: 0px;
+    background: white;
+    z-index: 9999;
+}
+.open:hover>.box{
+  height:400px;
+      transition: height 1s ease-out;
+}
+.open {
+    text-align: center;
+    font-size: 20px;
+    border: 2px solid #3F51B5;
+    background: #673AB7;
+    color: #eaeaea;
+}
+
   /* unvisited link */
 a:link {
     color: black;
